--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php" : "^7.1",
         "illuminate/config": "~5.5.0|~5.6.0|~5.7.0",
         "illuminate/database": "~5.5.0|~5.6.0|~5.7.0",
-        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0"
+        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
         "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0",
