--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,15 @@
     ],
     "require": {
         "php" : "^7.1",
-        "illuminate/config": "~5.3.0|~5.4.0|~5.5.0|~5.6.0|~5.7.0",
-        "illuminate/database": "~5.3.0|~5.4.0|~5.5.0|~5.6.0|~5.7.0",
-        "illuminate/support": "~5.3.0|~5.4.0|~5.5.0|~5.6.0|~5.7.0",
+        "illuminate/config": "~5.3.0",
+        "illuminate/database": "~5.3.0",
+        "illuminate/support": "~5.3.0",
         "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
-        "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0",
-        "phpunit/phpunit": "^7.4"
+        "mockery/mockery": "^1.0",
+        "orchestra/testbench": "~3.3.0",
+        "phpunit/phpunit": "^5.7"
     },
     "autoload": {
         "psr-4": {
