--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
     ],
     "require": {
         "php" : "^7.1",
-        "illuminate/config": "~5.3.0|~5.4.0|~5.5.0|~5.6.0|~5.7.0",
-        "illuminate/database": "~5.3.0|~5.4.0|~5.5.0|~5.6.0|~5.7.0",
-        "illuminate/support": "~5.3.0|~5.4.0|~5.5.0|~5.6.0|~5.7.0",
+        "illuminate/config": "~5.3.0|~5.4.0|~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0.0|~6.1.0|~6.2.0",
+        "illuminate/database": "~5.3.0|~5.4.0|~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0.0|~6.1.0|~6.2.0",
+        "illuminate/support": "~5.3.0|~5.4.0|~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0.0|~6.1.0|~6.2.0",
         "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
